# movies-manager

./: .gitignore  CHANGELOG.md  PERSONAL_CRITERIA.md  README.md  TODO.md  app.py  cli.py  csv_to_sqlite.py  dashboard.pbix  pyproject.toml
data/: data.csv  movies.db
pages/: 1_data.py  2_add_movie.py  3_edit_movie.py  add_movie.py  edit_movie.py
sql/: anime.sql  country.sql  genres.sql  goodwatch.sql  korea.sql  lastmonth.sql  lastyear.sql  latest.sql  rating.sql  recent.sql  schema.sql  status.sql  thismonth.sql  thisyear.sql  type.sql  watched.sql  watchedgenres.sql  watchedyear.sql  year.sql
sql/command/: latest.sql  recent.sql
tests/: test_cli.py  test_date.py  test_db.py  test_format_genres.py  test_valid_date.py
utils/: cli.py  constants.py  data.py  date.py  db.py  file.py  format.py  fuzzy.py  movie.py  movie_input.py  sql.py  streamlit_helpers.py  timing.py
