[project]
name = "movie-manager"
version = "0.3.1"
description = "ngntrgduc's movie manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "streamlit>=1.50.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.3.0",
    "rich>=14.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]